--- a/src/assets/scss/page/ticket.scss
+++ b/src/assets/scss/page/ticket.scss
@@ -1065,6 +1065,7 @@
     .tickBtn{
       margin: 2vw 0 5vw;
     }
+
     .tickPrompt {
       bottom: calc(-6px + -5vw);
       article {
@@ -1099,6 +1100,10 @@
 
     hgroup {
       padding-bottom: 1vw;
+    }
+    
+    .tickBtn{
+      margin: 2vw 0 5vw;
     }
   }
 
