學堂修改功能

--- a/src/assets/scss/page/school.scss
+++ b/src/assets/scss/page/school.scss
@@ -295,6 +295,7 @@
     letter-spacing: 0.3vw;
     line-height: 3vw;
     text-align: left;
+    color: $bgColorWhite;
     @media (max-width:768px) {
       letter-spacing: 0.7vw;
       width: 85vw;
