update 學堂 投票 add圖片

--- a/src/assets/scss/page/vote.scss
+++ b/src/assets/scss/page/vote.scss
@@ -196,6 +196,7 @@
         width: 9vw;
         height: auto;
         border: $primaryColorYellow solid 0.3em;
+        
       }
 
       .NO {
@@ -455,7 +456,7 @@
   position: relative;
   // padding-bottom: 211px;
   color: $mainTextColor;
-
+  background-attachment: fixed !important; 
   max-width: 1920px;
   box-sizing: border-box;
   background-color: $primaryColorGreen;
@@ -808,6 +809,7 @@
   background-color: $bgColorLightgray;
   background-repeat: no-repeat;
   background-position: bottom;
+  z-index: -1; /* 將背景置於內容下面 */
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -819,7 +821,7 @@
   position: relative;
   width: 100%;
   height: auto;
-
+ 
   .vote_overview_content {
     display: flex;
     flex-direction: column;
@@ -931,7 +933,7 @@
     background-position: 0% -50%;
     background-repeat: repeat;
     -webkit-background-sixe: cover;
-    background-size: contain;
+    background-size: cover;
     text-align: center;
     text-transform: uppercase;
     position: absolute;
@@ -945,6 +947,7 @@
     -webkit-background-clip: text;
     word-spacing: nowrap;
     text-shadow: 0 0 1px rgba(255, 255, 255, 0.4);
+    
   }
 }
 
