--- a/src/assets/scss/page/school.scss
+++ b/src/assets/scss/page/school.scss
@@ -270,12 +270,23 @@
   gap: 12%;
   z-index: 5;
   perspective: 1000px;
-
-  .coins {
-    position: absolute;
-    width: 3vw;
-   
 }
+
+.coins {
+  position: absolute;
+  width: 3vw;
+  animation: rotate 2.5s linear infinite; // 每次旋轉 2 秒
+
+  img {
+    transition: transform 0.5s ease;
+    transform-origin: center; // 確保圖片以中心點旋轉
+  }
+}
+
+@keyframes rotate {
+  to {
+    transform: rotateY(360deg);
+  }
 }
 .chimpanzees img {
   opacity: 1;
@@ -288,11 +299,12 @@
 }
 
 @keyframes jump {
-  0%, 100% {
-    transform: translateY(0) ; // 在原始位置時進行垂直翻轉
+  0%,
+  100% {
+    transform: translateY(0); // 在原始位置時進行垂直翻轉
   }
   50% {
-    transform: translateY(-20px) ; // 在跳躍時進行垂直翻轉
+    transform: translateY(-20px); // 在跳躍時進行垂直翻轉
   }
 }
 .result_all {
@@ -303,7 +315,7 @@
     line-height: 3vw;
     text-align: left;
     color: $bgColorWhite;
-    @media (max-width:768px) {
+    @media (max-width: 768px) {
       letter-spacing: 0.7vw;
       width: 85vw;
       line-height: 8vw;
