--- a/src/assets/scss/page/vote.scss
+++ b/src/assets/scss/page/vote.scss
@@ -251,9 +251,9 @@
           border-image-slice: 1;
 
           z-index: 3;
-          animation: increaseHeight1 5s forwards;
+          animation: Height1 5s forwards;
         }
-        @keyframes increaseHeight1 {
+        @keyframes Height1 {
           from {
             height: 0;
           }
@@ -290,9 +290,9 @@
             rgba(254, 208, 1, 0) 85%
           );
           z-index: 2;
-          animation: increaseHeight2 5s forwards; /* 播放增加高度的動畫，持續時間為2秒 */
+          animation: Height2 5s forwards; /* 播放增加高度的動畫，持續時間為2秒 */
         }
-        @keyframes increaseHeight2 {
+        @keyframes Height2 {
           from {
             height: 0;
           }
@@ -330,9 +330,9 @@
             rgba(254, 208, 1, 0) 85%
           );
           z-index: 1;
-          animation: increaseHeight3 5s forwards;
+          animation: Height3 5s forwards;
         }
-        @keyframes increaseHeight3 {
+        @keyframes Height3 {
           from {
             height: 0;
           }
